# typify

./: .gitignore  LICENSE  README.md  argtest.py  main.py  pyproject.toml  readme.md  testcode.py  train.txt  typemap.json  typifyconfig.json
index/: build_config.json
index/tfidf_index/: type_labels.npy
sample_project/: main.py  module_a.py  module_b.py  utils.py
src/: annotation_converter.py  annotation_parser.py  annotation_types.py  builtins_ctn.py  call_utils.py  chain.py  contanier_types.py  context.py  function_utils.py  infer_utils.py  inference_processor.py  inferencing.py  library_builder.py  library_processing.py  symbol_table.py  typeutils.py  utils.py
src/inferencing/: analyzer.py  commons.py  context.py  function_utils.py  inferencer.py  typeutils.py
src/preloading/: commons.py  module_utils.py  preloader.py  setup_utils.py
src/preprocessing/: attribute_collector.py  dependency_tracker.py  dependency_utils.py  graph_utils.py  import_mapper.py  import_processor.py  library_meta.py  module_meta.py  preloader.py  preprocessor.py  scope_manager.py  symbol_collector.py  symbol_slot_collector.py  symbol_table.py  type_slots_collector.py
typify/: __init__.py  caching.py  cli.py  errors.py  logging.py  main-symbols.json  main-types.json  normalizer.py  progbar.py  run_build.py  run_gt.py  run_infer.py  testcode-symbols.json  testcode-types.json  train.txt  utils.py
typify-defaults/builtinlib/: builtins.pyi
typify-defaults/stdlib/: __future__.pyi  builtins.pyi  types.pyi  typing.pyi
typify/inferencing/: analyzer.py  annotation_utils.py  commons.py  (+14 more)
(+81 files in other folders)
