[tool.setuptools.packages.find]
include = ["typify*"]
exclude = ["typifystubs*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typify"
version = "0.1.0"
description = "Static Type Inference Tool"
readme = "README.md"
authors = [{ name = "Ali Aman", email = "ali@burki1@hotmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["click", "whoosh", "tqdm"]

[project.scripts]
typify = "typify.cli:main"