[tool.setuptools.packages.find]
include = ["typify*"]
exclude = ["typifystubs*"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typify"
version = "0.1.0"
description = "Static Type Inference Tool"
readme = "README.md"
authors = [{ name = "Ali Aman" }]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "click",
    "tqdm",
    "pandas>=2.0",
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "joblib>=1.2",
    "rich>=13.0"
]

[project.scripts]
typify = "typify.cli:main"
